--- a/README.yaml
+++ b/README.yaml
@@ -1,4 +1,4 @@
-name: Terraform Transit Gateway Module
+name: Terraform API Gateway Basic setup
 #logo: logo/logo.jpg
 
 license: "APACHE2"
@@ -11,7 +11,7 @@ copyrights:
 github_repo: cloudopsworks/terraform-module-aws-vpc-setup
 
 description: |-
-  VPC Module for setting up transit gateway with ResourceAccessMananger support.
+  VPC Module for setting up API Gateway with basic settings.
 
 # Introduction to the project
 #introduction: |-
